[package]
name = "reutils"
version = "0.1.0"
edition = "2021"
description = "A reimplementation of busybox in rust"
readme = "README.md"
repository = "https://github.com/Elizafox/reutils"
license = "GPL-2.0-only"
publish = false  # Not ready yet
rust-version = "1.65.0"
authors = ["Elizabeth Myers", "Malina Thomas"]

[badges]
maintenance = { status = "experimental" }

[profile.dev]
debug = true
opt-level = 2
lto = true

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[build-dependencies]
vergen = { version = "8.2.1", features = ["build", "cargo", "git", "git2", "rustc", "si"] }
libc = { version = "0.2.144", features = ["const-extern-fn"] }

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["std", "clock"] }
getargs = "0.5.0"
libc = { version = "0.2.144", features = ["const-extern-fn"] }
notify = { version = "6.0.0", default-features = false, features = ["macos_kqueue"] }
phf = { version = "0.11.1", features = ["macros"] }

# 2023-05-28 AMR TODO: remove these when upstreams bump windows-sys
filetime = "=0.2.20"
mio = "=0.8.6"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"
